# ea-bot-backend

./: README.md  manage.py  pyproject.toml
EABotBackend/: asgi.py  settings.py  urls.py  wsgi.py
api/: admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py
